<resources>
    <string name="app_name">Assesment App</string>


    <string name="txtName">Emp. Name : %s</string>
    <string name="txtage">Emp. Age : %s</string>
    <string name="txtId">Emp. Id : %s</string>
    <string name="txtSalary">Emp. Salary : %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txtSomethingWentWrong">Something went wriong</string>
    <string name="txtOkay">Okay</string>
    <string name="txtRetry">Retry</string>
    <string name="txtCancel">Cancel</string>


    <!--    Sign in Page-->
    <string name="txtEnteremail">Enter Email</string>
    <string name="txtEnterPassword">Enter Password</string>
    <string name="txtLoginButton">Login</string>
    <string name="txtValidateMsg">please enter correct email and password</string>
    <string name="txtShowLoginError">Something went wrong</string>
    <!--    Sign in Page-->

</resources>